# brewdistillery

./: .gitignore  Cargo.toml  PRD.md  PROMPT.md  README.md  USER_FEEDBACK.md  USER_TODO.md
.distill/: config.toml
.forge/ledgers/: dashing-mackey.md  tranquil-quimby.md  zesty-quimby.md
.tasks/: tasks.jsonl  tasks.snapshot.json
.tickets/: b-05c0.md  b-0c53.md  b-17c7.md  b-1db3.md  b-1dba.md  b-2408.md  b-2855.md  b-2cb5.md  b-3a95.md  b-45bb.md  b-4c15.md  b-4cbe.md  b-5e52.md  b-63a9.md  b-65c5.md  b-7f57.md  b-8608.md  b-95d5.md  b-9b6a.md  b-9dc9.md  b-a5e6.md  b-b643.md  b-c350.md  b-c611.md  b-cca2.md  b-d0d0.md  b-d5d1.md  b-df91.md  b-e0b9.md  b-e162.md  b-e18f.md  b-e7c2.md  b-e7f2.md  b-ed18.md  b-f891.md
docs/: asset-selection.md  checksum-acquisition.md  config.example.toml  config.md  doctor.md  documentation-outputs.md  errors.md  formula-naming.md  formula-template.md  formula-version.md  git-integration.md  git-remotes.md  github-tap-creation.md  host-abstraction.md  identity.md  import-formula.md  init-prompt-flow.md  metadata-detection.md  multi-bin.md  non-interactive.md  preview.md  release-discovery.md  release-orchestration.md  tap-repo.md  testing-matrix.md  version-update.md
docs/inspiration/: morningweave
scripts/: check_user_feedback.sh  init_user_feedback.sh  update_user_feedback.sh
src/: asset_selection.rs  cli.rs  config.rs  context.rs  errors.rs  formula.rs  git.rs  lib.rs  license.rs  main.rs  preview.rs  repo_detect.rs  version.rs  version_update.rs
src/commands/: doctor.rs  init.rs  mod.rs  release.rs  template.rs
(+4 files in other folders)
