[package]
name = "brewdistillery"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "bd"
path = "src/bin/bd.rs"

[[bin]]
name = "brewdistillery"
path = "src/bin/brewdistillery.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
semver = "1"
similar = "2.5"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
tempfile = "3"
dialoguer = "0.11"
regex = "1"
spdx = "0.13.3"

[dev-dependencies]
